2010-10-27 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Implemented checkmarks on selected menu items.

2010-08-31 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* WinNSOpenPanel.m: Fix a small problem opening a FOLDER after having 
	opened a document previously.  Needed to reset the file offset pointer.

2010-08-30 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Fix problem of pulldown menu incorrectly including the button title.

2010-08-25 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSMenu.m: Provisional fix for https://savannah.gnu.org/bugs/?29708
	(menu not updated when selecting "Undo" in Ink)

2010-07-06 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSOpenPanel.m: Remove assumtion that the app's default
	file types array is non-empty. This was causing an exception
	to be thrown in GSTest and LaternaMagica.

2010-05-27 Doug Simons <doug.simons@testplant.com>

	* WinNSOpenPanel.m: Purge extraneous events which may get passed
	on to us from Windows while running modal open/save panels.

2010-05-27 00:52-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Do not generate fake menu items when displaying
	a menu for a NSPopUpButton which pulls down.

2010-05-26 23:53-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Added a call to update to the new methods so that
	the menus for both popups and for context menus are validated.

2010-05-20 04:17-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: added code to use the new displayPopUpMenu:... method
	and also added an implementation here to use it.   Additionally
	added a flag to r_create_menu which creates fake menu items if needed
	when building so that the parent popup button's state is updated
	correctly.

2010-05-13 17:06-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSBrowserHeader.m
	* WinNSButton.m
	* WinNSMenuItemCell.m
	* WinNSMenu.m
	* WinNSScroller.m